@@ -52,10 +52,15 @@ public class SerialColumn extends NumericColumn<SerialColumn, Integer> {
      */
     @Override
     public Integer fromSqlType(Object value) throws UnsupportedSqlType {
-        if (value instanceof Integer) {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedSqlType("Value cannot be null.");
+            }
+            return null;
+        } else if (value instanceof Integer) {
             return (Integer) value;
         }
-        throw new UnsupportedSqlType("Expected Integer got %s instead.".formatted(value.getClass().getName()));
+        throw new UnsupportedSqlType(String.format("Expected Integer got %s instead.", value.getClass().getName()));
     }
 
     /**
@@ -69,10 +74,16 @@ public class SerialColumn extends NumericColumn<SerialColumn, Integer> {
     @Override
     public void setToStatement(PreparedStatement statement, Integer index, Object value)
             throws UnsupportedValueType, SQLException {
-        if (value instanceof Integer) {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedValueType("Value cannot be null");
+            }
+            statement.setNull(index, java.sql.Types.INTEGER);
+        } else if (value instanceof Integer) {
             statement.setInt(index, (Integer) value);
         } else {
-            throw new UnsupportedValueType("Expected Integer got %s instead.".formatted(value.getClass().getName()));
+            throw new UnsupportedValueType(
+                    String.format("Expected Integer got %s instead.", value.getClass().getName()));
         }
     }
 }
